--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.7.2",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react_ujs": "^2.6.0",
+    "redux": "^4.0.4",
+    "reselect": "^4.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
