--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react_ujs": "^2.6.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "reselect": "^4.0.0",
     "turbolinks": "^5.2.0"
