--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-table": "^6.10.3",
     "react_ujs": "^2.6.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
