--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
