--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.10.2",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.2",
+    "react-power-tooltip": "^1.0.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-table": "^6.10.3",
